@@ -146,6 +146,8 @@ code {
 
 <p><strong>fade_duration</strong> | <code>duration</code> | How long the combat text will spend fading out in 'ms' or 's'.</p>
 
+<p><strong>font</strong> | <code>predefined_string</code> | The font to use for combat text.</p>
+
 <hr />
 
 <h4>CursorManager</h4>
